Layout: Header Completed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dropbox-websitereproduction</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <header class="topheader debug">
+    <div class="headerbox"></div>
+    <div class="headerbox"></div>
+  </header>
+
+  <body>
+    <div class="bottomheader">
+      <div id="bottomheaderbox">
+        <div id="bottomheaderinternalboxtext"></div>
+        <div id="bottomheaderinternalboximg"></div>
+      </div>
+    </div>
+    <main></main>
+  </body>
 </html>
