Layout: Working on body

--- a/index.html
+++ b/index.html
@@ -11,14 +11,26 @@
     <div class="headerbox"></div>
     <div class="headerbox"></div>
   </header>
+  <div class="bottomheader">
+    <div id="bottomheaderbox">
+      <div id="bottomheaderinternalboxtext"></div>
+      <div id="bottomheaderinternalboximg"></div>
+    </div>
+  </div>
 
   <body>
-    <div class="bottomheader">
-      <div id="bottomheaderbox">
-        <div id="bottomheaderinternalboxtext"></div>
-        <div id="bottomheaderinternalboximg"></div>
+    <main>
+      <div class="mainbox">
+        <div id="businessplanbox">
+          <div class="businessplan"></div>
+          <div class="businessplan"></div>
+          <div class="businessplan"></div>
+        </div>
+
+        <div id="officecontactbox"></div>
+        <div></div>
+        <div></div>
       </div>
-    </div>
-    <main></main>
+    </main>
   </body>
 </html>
