Layout: working on Main body structure

--- a/index.html
+++ b/index.html
@@ -20,17 +20,32 @@
 
   <body>
     <main>
+      <!--Container Main--->
       <div class="mainbox">
+        <!--Container--->
         <div id="businessplanbox">
           <div class="businessplan"></div>
           <div class="businessplan"></div>
           <div class="businessplan"></div>
         </div>
+        <!--Container--->
 
-        <div id="officecontactbox"></div>
-        <div></div>
+        <!--Container--->
+        <div id="officecontactbox">
+          <div id="officeupperbox"></div>
+          <div class="containerbusinessbox">
+            <div id="officeleftbox"></div>
+            <div id="officerightbox"></div>
+          </div>
+        </div>
+        <!--Container--->
+        <div id="becomepartnerbox">
+          <div class="becomepartnerboximg"></div>
+          <div class="becomepartnerboxtext"></div>
+        </div>
         <div></div>
       </div>
+      <!--Container Main--->
     </main>
   </body>
 </html>
