Layout: Prog main body

--- a/index.html
+++ b/index.html
@@ -43,7 +43,39 @@
           <div class="becomepartnerboximg"></div>
           <div class="becomepartnerboxtext"></div>
         </div>
-        <div></div>
+        <!--Container--->
+        <div id="dropboxbusinessbox">
+          <div class="dropboxbusinesscontainer">
+            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"></div>
+          </div>
+          <div class="dropboxbusinesscontainer">
+            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"></div>
+          </div>
+          <div class="dropboxbusinesscontainer">
+            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"></div>
+          </div>
+          <div class="dropboxbusinesscontainer">
+            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"></div>
+          </div>
+          <div class="dropboxbusinesscontainer">
+            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"></div>
+          </div>
+          <div class="dropboxbusinesscontainer">
+            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"></div>
+          </div>
+         <!--Container--->
       </div>
       <!--Container Main--->
     </main>
