Layout: sezione loghi completata

--- a/index.html
+++ b/index.html
@@ -75,9 +75,31 @@
             <div class="dropcontainerbox"></div>
             <div class="dropcontainerbox"></div>
           </div>
-         <!--Container--->
+        </div>
+        <!--Container--->
+
+        <!--Container--->
+        <div id="bottomtextdiv"></div>
+        <!--Container--->
       </div>
       <!--Container Main--->
     </main>
+    <!--Container bottom--->
+    <div id="logoboxbottom">
+      <div class="logobox">
+        <div class="logo"></div>
+        <div class="logo"></div>
+        <div class="logo"></div>
+        <div class="logo"></div>
+      </div>
+      <div class="logobox"></div>
+      <div class="logobox">
+        <div class="logo"></div>
+        <div class="logo"></div>
+        <div class="logo"></div>
+        <div class="logo"></div>
+      </div>
+    </div>
+    <!--Container bottom--->
   </body>
 </html>
