Layout: Finishing Footer

--- a/index.html
+++ b/index.html
@@ -84,22 +84,41 @@
       </div>
       <!--Container Main--->
     </main>
+
     <!--Container bottom--->
-    <div id="logoboxbottom">
-      <div class="logobox">
-        <div class="logo"></div>
-        <div class="logo"></div>
-        <div class="logo"></div>
-        <div class="logo"></div>
+    <div>
+      <div id="logoboxbottom">
+        <div class="logobox">
+          <div class="logo"></div>
+          <div class="logo"></div>
+          <div class="logo"></div>
+          <div class="logo"></div>
+        </div>
+        <div class="logobox"></div>
+        <div class="logobox">
+          <div class="logo"></div>
+          <div class="logo"></div>
+          <div class="logo"></div>
+          <div class="logo"></div>
+        </div>
       </div>
-      <div class="logobox"></div>
-      <div class="logobox">
-        <div class="logo"></div>
-        <div class="logo"></div>
-        <div class="logo"></div>
-        <div class="logo"></div>
+      <div id="bottomcontainerbox">
+        <div id="bottomcontainer"></div>
+      </div>
+
+      <div id="faqcontainer">
+        <div id="faqbox">
+          <div id="faqtextbox"></div>
+          <div class="faqquestionbox"></div>
+          <div class="faqquestionbox"></div>
+          <div class="faqquestionbox"></div>
+        </div>
       </div>
     </div>
     <!--Container bottom--->
   </body>
+
+  <!--Footer--->
+  <footer></footer>
+  <!--Footer--->
 </html>
