Layout: Completato. Alcune feature di debug da fixare

--- a/index.html
+++ b/index.html
@@ -119,6 +119,62 @@
   </body>
 
   <!--Footer--->
-  <footer></footer>
+  <footer>
+    <div id="divfooter">
+      <div id="footerlists">
+        <div class="footerlist">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="footerlist">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="footerlist">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="footerlist">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="footerlist">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+      <div id="footerlaguagebutton"></div>
+    </div>
+  </footer>
   <!--Footer--->
 </html>
