header fix (iniziato tardi problemi di salute)

--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <header class="topheader debug">
-    <div class="headerbox"></div>
-    <div class="headerbox"></div>
+    <div class="headerbox">
+      <ul>
+        <img src="./img/logo-small.png" alt="" />
+        <li>Perchè Dropbox</li>
+        <li>Funzioni</li>
+        <li>Piani e Prezzi</li>
+      </ul>
+    </div>
+    <div class="headerleftbox">
+      <ul id="leftulheader">
+        <li>Supporto</li>
+        <li>Contatto ufficio vendite</li>
+        <li>Accedi</li>
+        <button id="loginbutton">Inizia</button>
+      </ul>
+    </div>
   </header>
   <div class="bottomheader">
     <div id="bottomheaderbox">
