working on Header, Adding image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dropbox-websitereproduction</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <header class="topheader debug">
     <div class="headerbox">
@@ -26,9 +33,22 @@
     </div>
   </header>
   <div class="bottomheader">
-    <div id="bottomheaderbox">
-      <div id="bottomheaderinternalboxtext"></div>
-      <div id="bottomheaderinternalboximg"></div>
+    <div id="headerbottombox">
+      <h1>Tutto ciò che ti server per il lavoro in un un'unico posto</h1>
+      <div id="bottomheaderbox">
+        <div id="bottomheaderinternalboxtext">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis ea ducimus accusantium distinctio ullam asperiores,
+            amet iusto adipisci nemo tenetur reiciendis, porro sed quae sequi!
+            Sed fuga eaque asperiores non?
+          </p>
+          <button>Inizia la tua prova gratuita</button>
+          <p>lorem ipsum</p>
+          <i class="fa-solid fa-arrow-down"></i>
+        </div>
+        <div id="bottomheaderinternalboximg"></div>
+      </div>
     </div>
   </div>
 
