working on body

--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
           <p>lorem ipsum</p>
           <i class="fa-solid fa-arrow-down"></i>
         </div>
-        <div id="bottomheaderinternalboximg"></div>
+        <div id="bottomheaderinternalboximg">
+          <img src="./img/jumbo.png" alt="" />
+        </div>
       </div>
     </div>
   </div>
