header-body fix

--- a/index.html
+++ b/index.html
@@ -59,6 +59,17 @@
       <!--Container Main--->
       <div class="mainbox">
         <!--Container--->
+        <div>
+          <h1>Trova il piano business che fa per te</h1>
+          <span
+            ><span id="circle"><i class="fa-regular fa-circle"></i></span
+            >fatturazione mensile</span
+          >
+          <span
+            ><span id="iconmainbox"><i class="fa-regular fa-circle"></i></span
+            >fatturazione annuale</span
+          >
+        </div>
         <div id="businessplanbox">
           <div class="businessplan"></div>
           <div class="businessplan"></div>
