working on businessplans box

--- a/index.html
+++ b/index.html
@@ -71,7 +71,37 @@
           >
         </div>
         <div id="businessplanbox">
-          <div class="businessplan"></div>
+          <div class="businessplan">
+            <ul class="firstul">
+              <li class="titolo">Professional</li>
+              <li class="Cost">€ 12.00</li>
+              <li class="montlyplan">/mese</li>
+            </ul>
+            <ul class="secondul">
+              <li><i class="fa-solid fa-user"></i>1 Utente</li>
+              <li>
+                <i class="fa-solid fa-folder"></i>5 Tb di spazio di
+                archiviazione sicuro
+              </li>
+              <li>
+                <i class="fa-solid fa-share-nodes"></i>Funzioni di Produttività
+                premium e condivisione file semplice e sicura
+              </li>
+              <button class="freetrialbutton">
+                Prova gratis per 30 giorni
+              </button>
+              <p>oppure <a href="#">acquista ora</a></p>
+              <p><strong>Punti salienti del piano</strong></p>
+              <li class="bottomtext">
+                <i class="fa-solid fa-check"></i>
+                Invia file fino a 100GB con dropbox transfert
+              </li>
+              <li class="bottomtext">
+                <i class="fa-solid fa-check"></i>Cartelle offline su dispositivi
+                mobili
+              </li>
+            </ul>
+          </div>
           <div class="businessplan"></div>
           <div class="businessplan"></div>
         </div>
