--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!--Container Main--->
       <div class="mainbox">
         <!--Container--->
-        <div>
+        <div class="maincontainertitlebox">
           <h1>Trova il piano business che fa per te</h1>
           <span
             ><span id="circle"><i class="fa-regular fa-circle"></i></span
@@ -71,6 +71,7 @@
           >
         </div>
         <div id="businessplanbox">
+          <!--Primo businessplan-->
           <div class="businessplan">
             <ul class="firstul">
               <li class="titolo">Professional</li>
@@ -102,9 +103,94 @@
               </li>
             </ul>
           </div>
-          <div class="businessplan"></div>
-          <div class="businessplan"></div>
-        </div>
+          <!--Primo businessplan-->
+
+          <!--Secondo businessplan-->
+          <div class="businessplan">
+            <ul class="firstul">
+              <li class="titolo">Advanced</li>
+              <li class="Cost">€ 18.00</li>
+              <li class="montlyplan">/utente/mese</li>
+            </ul>
+            <ul class="secondul">
+              <!--Secondo businessplan lista caratteristiche-->
+              <div class="caratteristiche">
+              <li><i class="fa-solid fa-user"></i>3 o piu' utenti</li>
+              <li>
+                <i class="fa-solid fa-folder"></i>tutto lo spazio di cui hai
+                bisogno tu e il tuo team
+              </li>
+              <li>
+                <i class="fa-solid fa-share-nodes"></i>sostificate funzioni di
+                controllo e per tenere al sicuro tutti i file del tuo team
+              </li>
+              </div>
+              <!--Secondo businessplan lista caratteristiche-->
+              <button class="freetrialbutton">
+                Prova gratis per 30 giorni
+              </button>
+              <p>oppure <a href="#">acquista ora</a></p>
+              <p><strong>Punti salienti del piano</strong></p>
+              <li class="bottomtext">
+                <i class="fa-solid fa-check"></i>
+                nessuno spazio limite per i file
+              </li>
+              <div>
+              <li>
+                <i class="fa-solid fa-check"></i>cartelle offline su dispositivi
+                mobili
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>risparmio del 50% rispetto alle
+                iscrizioni singole
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>possibilità di inserire nuovi
+                membri del team
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>gestione dei permessi in base
+                ai ruoli
+              </li>
+              <li class="bottomtext"></li>
+            </ul>
+          </div>
+          <!--Secondo businessplan-->
+
+          <!--Terzo businessplan-->
+            <div class="businessplan">
+              <ul class="firstul">
+                <li class="titolo">Professional</li>
+                <li class="Cost">€ 12.00</li>
+                <li class="montlyplan">/mese</li>
+              </ul>
+              <ul class="secondul">
+                <li><i class="fa-solid fa-user"></i>10 o piu' utenti</li>
+                <li>
+                  <i class="fa-solid fa-folder"></i>soluzioni personalizzabili per la tua azienda
+                </li>
+                <li>
+                  <i class="fa-solid fa-share-nodes"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala
+                </li>
+                <button class="freetrialbutton">
+                  Prova gratis per 30 giorni
+                </button>
+                <p>oppure <a href="#">acquista ora</a></p>
+                <p><strong>Punti salienti del piano</strong></p>
+                <li class="bottomtext">
+                  <i class="fa-solid fa-check"></i>
+                  Cartelle offline su dispositivi mobili
+                </li>
+                <li class="bottomtext">
+                  <i class="fa-solid fa-check"></i>Servizio assistenza 24/h
+                </li>
+                <li class="bottomtext">
+                  <i class="fa-solid fa-check"></i>Possibilità di personalizzazione totale
+                </li>
+              </ul>
+            </div>
+            <!--Terzo businessplan-->
+          </div>
         <!--Container--->
 
         <!--Container--->
