Working on Dropbox business, fix generali text e business pack

--- a/index.html
+++ b/index.html
@@ -195,16 +195,32 @@
 
         <!--Container--->
         <div id="officecontactbox">
-          <div id="officeupperbox"></div>
+          <div id="officeupperbox"><i class="fa-regular fa-building"></i>Team</div>
           <div class="containerbusinessbox">
-            <div id="officeleftbox"></div>
-            <div id="officerightbox"></div>
+            <div id="officeleftbox">
+              <h1 id="titleenterprise">Enterprise</h1>
+              <p id="enterprisetext"><strong>contatta l'ufficio vendite</strong></p>
+              <p id="enterprisefulltext">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus labore, ducimus corporis est iure quam quis nostrum accusamus atque quo voluptates aspernatur eligendi voluptatibus quod praesentium quidem cupiditate nesciunt esse.</p>
+            </div>
+            <div id="officerightbox">
+              <button id="contactufficiovenditebtn">Contatta l'ufficio vendite</button>
+            </div>
           </div>
         </div>
         <!--Container--->
         <div id="becomepartnerbox">
-          <div class="becomepartnerboximg"></div>
-          <div class="becomepartnerboxtext"></div>
+          <div class="becomepartnerboximg">
+
+          </div>
+          <div class="becomepartnerboxtext">
+            <h1>Entra in contatto con un partner Dropbox</h1>
+            <p>Lorem ipsum dolor sit amet consectetur
+               adipisicing elit. Amet cumque possimus 
+               odit perferendis, numquam aliquid omnis? 
+               Quo dicta culpa totam sed quia quibusdam in nobis! 
+               Est cum quidem veritatis a?</p>
+               <button id="findpartnerbtn">Trova un partner</button>
+          </div>
         </div>
         <!--Container--->
         <div id="dropboxbusinessbox">
