Completato corpo principale fino a sezioni loghi. da rifinire dettagli di altezze sulla sezione businessplans

--- a/index.html
+++ b/index.html
@@ -225,40 +225,60 @@
         <!--Container--->
         <div id="dropboxbusinessbox">
           <div class="dropboxbusinesscontainer">
-            <div class="dropcontainerbox"></div>
-            <div class="dropcontainerbox"></div>
-            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"><img src="./img/business-feature-switching-tools.png" alt=""></div>
+            <div class="dropcontainerbox"><h3>passa di meno da uno strumento all'altro</h3></div>
+            <div class="dropcontainerbox"><p>Lorem ipsum dolor sit amet consectetur 
+              adipisicing elit. Ullam deleniti tempore cupiditate itaque ad, 
+              porro aut officiis voluptatem totam dicta quaerat, ipsam nisi?
+               Esse, dolorum repellendus? Maiores totam vel beatae!</p></div>
           </div>
           <div class="dropboxbusinesscontainer">
-            <div class="dropcontainerbox"></div>
-            <div class="dropcontainerbox"></div>
-            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"><img src="./img/business-feature-send-files-it.png" alt=""></div>
+            <div class="dropcontainerbox"><h3>passa di meno da uno strumento all'altro</h3></div>
+            <div class="dropcontainerbox"><p>Lorem ipsum dolor sit amet consectetur 
+              adipisicing elit. Ullam deleniti tempore cupiditate itaque ad, 
+              porro aut officiis voluptatem totam dicta quaerat, ipsam nisi?
+               Esse, dolorum repellendus? Maiores totam vel beatae!</p></div>
           </div>
           <div class="dropboxbusinesscontainer">
-            <div class="dropcontainerbox"></div>
-            <div class="dropcontainerbox"></div>
-            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"><img src="./img/business-feature-coordinate-it.png" alt=""></div>
+            <div class="dropcontainerbox"><h3>passa di meno da uno strumento all'altro</h3></div>
+            <div class="dropcontainerbox"><p>Lorem ipsum dolor sit amet consectetur 
+              adipisicing elit. Ullam deleniti tempore cupiditate itaque ad, 
+              porro aut officiis voluptatem totam dicta quaerat, ipsam nisi?
+               Esse, dolorum repellendus? Maiores totam vel beatae!</p></div>
           </div>
           <div class="dropboxbusinesscontainer">
-            <div class="dropcontainerbox"></div>
-            <div class="dropcontainerbox"></div>
-            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"><img src="./img/business-feature-integrations-it.png" alt=""></div>
+            <div class="dropcontainerbox"><h3>passa di meno da uno strumento all'altro</h3></div>
+            <div class="dropcontainerbox"><p>Lorem ipsum dolor sit amet consectetur 
+              adipisicing elit. Ullam deleniti tempore cupiditate itaque ad, 
+              porro aut officiis voluptatem totam dicta quaerat, ipsam nisi?
+               Esse, dolorum repellendus? Maiores totam vel beatae!</p></div>
           </div>
           <div class="dropboxbusinesscontainer">
-            <div class="dropcontainerbox"></div>
-            <div class="dropcontainerbox"></div>
-            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"><img src="./img/business-feature-multi-device.png" alt=""></div>
+            <div class="dropcontainerbox"><h3>passa di meno da uno strumento all'altro</h3></div>
+            <div class="dropcontainerbox"><p>Lorem ipsum dolor sit amet consectetur 
+              adipisicing elit. Ullam deleniti tempore cupiditate itaque ad, 
+              porro aut officiis voluptatem totam dicta quaerat, ipsam nisi?
+               Esse, dolorum repellendus? Maiores totam vel beatae!</p></div>
           </div>
           <div class="dropboxbusinesscontainer">
-            <div class="dropcontainerbox"></div>
-            <div class="dropcontainerbox"></div>
-            <div class="dropcontainerbox"></div>
+            <div class="dropcontainerbox"><img src="./img/business-feature-security.png" alt=""></div>
+            <div class="dropcontainerbox"><h3>passa di meno da uno strumento all'altro</h3></div>
+            <div class="dropcontainerbox"><p>Lorem ipsum dolor sit amet consectetur 
+              adipisicing elit. Ullam deleniti tempore cupiditate itaque ad, 
+              porro aut officiis voluptatem totam dicta quaerat, ipsam nisi?
+               Esse, dolorum repellendus? Maiores totam vel beatae!</p></div>
           </div>
         </div>
         <!--Container--->
 
         <!--Container--->
-        <div id="bottomtextdiv"></div>
+        <div id="bottomtextdiv"><h2>Piu' di 500 mila team utilizzano <br> dropbox Business</h2>
+        <a href="#">Scopri di piu' sui notri clienti</a>
+      </div>
         <!--Container--->
       </div>
       <!--Container Main--->
