Aggiunta loghi zona bottom

--- a/index.html
+++ b/index.html
@@ -288,17 +288,18 @@
     <div>
       <div id="logoboxbottom">
         <div class="logobox">
-          <div class="logo"></div>
-          <div class="logo"></div>
-          <div class="logo"></div>
-          <div class="logo"></div>
+          <div id="logodesignit"class="logo"><img src="./img/designit.svg" alt=""></div>
+          <div id="logoarizona"class="logo"><img src="./img/arizona_state_university.svg" alt=""></div>
+          <div id="logoflorida" class="logo"><img src="./img/university_of_florida.svg" alt=""></div>
+          <div id="logotopps"class="logo"><img src="./img/topps.svg" alt=""></div>
         </div>
         <div class="logobox"></div>
         <div class="logobox">
-          <div class="logo"></div>
-          <div class="logo"></div>
-          <div class="logo"></div>
-          <div class="logo"></div>
+          <div id="logobicycle" class="logo"><img src="./img/world_bicycle_relief.svg" alt="">
+          </div>
+          <div id="logohearst"class="logo"><img src="./img/hearst_corp.svg" alt=""></div>
+          <div id="logoplanet"class="logo"><img src="./img/lonely_planet.svg" alt=""></div>
+          <div id="logoclear"class="logo"><img src="./img/clear_channel.svg" alt=""></div>
         </div>
       </div>
       <div id="bottomcontainerbox">
