small header fix

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     />
   </head>
   <header class="topheader debug">
-    <div class="headerbox">
-      <ul>
+    <div class="headerleftbox">
+      <ul id="leftheaderbox">
         <img src="./img/logo-small.png" alt="" />
         <li>Perchè Dropbox</li>
         <li>Funzioni</li>
         <li>Piani e Prezzi</li>
       </ul>
-    </div>
-    <div class="headerleftbox">
-      <ul id="leftulheader">
+     </div>
+    <div class="headerrightbox">
+      <ul id="rightulheader">
         <li>Supporto</li>
         <li>Contatto ufficio vendite</li>
         <li>Accedi</li>
@@ -293,7 +293,15 @@
           <div id="logoflorida" class="logo"><img src="./img/university_of_florida.svg" alt=""></div>
           <div id="logotopps"class="logo"><img src="./img/topps.svg" alt=""></div>
         </div>
-        <div class="logobox"></div>
+        <div class="logoboxspecial">
+          <ul class="logospecialtxt">
+            <li><h2>Designit</h2></li>
+            <li><p>a <strong>wipro</strong> company</p></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
         <div class="logobox">
           <div id="logobicycle" class="logo"><img src="./img/world_bicycle_relief.svg" alt="">
           </div>
