aggiunta testi sezione loghi +  fix css liste header /* cambiamento di alcuni selettori per facilitare la lettura */

--- a/index.html
+++ b/index.html
@@ -294,12 +294,16 @@
           <div id="logotopps"class="logo"><img src="./img/topps.svg" alt=""></div>
         </div>
         <div class="logoboxspecial">
-          <ul class="logospecialtxt">
+          <ul id="logospecialtxt">
             <li><h2>Designit</h2></li>
             <li><p>a <strong>wipro</strong> company</p></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><hr></li>
+            <li><p>Lorem ipsum, dolor sit amet consectetur
+               adipisicing elit. Debitis, neque? Iusto inventore 
+               maxime ut doloremque dicta soluta, commodi natus 
+               voluptatem alias fugit deleniti. Eligendi, nesciunt
+                ducimus vel ea quo laudantium.</p></li>
+            <li><span>Morten Thomsen, Global IT lead</span></li>
           </ul>
         </div>
         <div class="logobox">
