Completamente footer, menu' faq a tendina da fixare

--- a/index.html
+++ b/index.html
@@ -315,15 +315,34 @@
         </div>
       </div>
       <div id="bottomcontainerbox">
-        <div id="bottomcontainer"></div>
+        <div id="bottomcontainer"><Span>Porta Dropbox Business <br> nella tua azienda.</Span>
+          <button>Inizia la tua prova gratuita</button>
+        </div>
       </div>
 
       <div id="faqcontainer">
         <div id="faqbox">
-          <div id="faqtextbox"></div>
-          <div class="faqquestionbox"></div>
-          <div class="faqquestionbox"></div>
-          <div class="faqquestionbox"></div>
+          <div id="faqtextbox">Domande frequenti</div>
+          <hr>
+          <div class="faqquestionbox"><span>qual'è la differenza tra drop business standard e Dropbox Business Advanced</span>
+            <p id="txtbox">Lorem ipsum dolor sit amet consectetur, 
+              adipisicing elit. Iusto sequi voluptatum assumenda corporis.
+               Impedit, esse perspiciatis, eligendi enim voluptatum molestiae
+                odit, iste ad labore aut eius optio reprehenderit officia explicabo.</p>
+           </div>
+           <hr>
+          <div class="faqquestionbox"><span>qual'è la differenza tra drop business standard e Dropbox Business Advanced</span>
+            <p id="txtbox">Lorem ipsum dolor sit amet consectetur, 
+              adipisicing elit. Iusto sequi voluptatum assumenda corporis.
+               Impedit, esse perspiciatis, eligendi enim voluptatum molestiae
+                odit, iste ad labore aut eius optio reprehenderit officia explicabo.</p> </div>
+            <hr>
+          <div class="faqquestionbox"><span>qual'è la differenza tra drop business standard e Dropbox Business Advanced</span>
+            <p id="txtbox">Lorem ipsum dolor sit amet consectetur, 
+              adipisicing elit. Iusto sequi voluptatum assumenda corporis.
+               Impedit, esse perspiciatis, eligendi enim voluptatum molestiae
+                odit, iste ad labore aut eius optio reprehenderit officia explicabo.</p></div>
+            <hr>    
         </div>
       </div>
     </div>
@@ -336,52 +355,54 @@
       <div id="footerlists">
         <div class="footerlist">
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li id="titoloulfooter">Dropbox</li>
+            <li>Applicazione desktop</li>
+            <li>Perchè dropbox</li>
+            <li>Piani</li>
+            <li>Sicurezza</li>
+            <li>Funzioni</li>
+            <li id="special"><hr></li>
+            <li><i class="fa-solid fa-earth-americas"></i>Italiano<i class="fa-solid fa-caret-up"></i></li>
           </ul>
         </div>
         <div class="footerlist">
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li id="titoloulfooter">Prodotti</li>
+            <li>Applicazione desktop</li>
+            <li>Perchè dropbox</li>
+            <li>Piani</li>
+            <li>Sicurezza</li>
+            <li>Funzioni</li>
           </ul>
         </div>
         <div class="footerlist">
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li id="titoloulfooter">Azienda</li>
+            <li>Applicazione desktop</li>
+            <li>Perchè dropbox</li>
+            <li>Piani</li>
+            <li>Sicurezza</li>
+            <li>Funzioni</li>
           </ul>
         </div>
         <div class="footerlist">
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li id="titoloulfooter">Supporto</li>
+            <li>Applicazione desktop</li>
+            <li>Perchè dropbox</li>
+            <li>Piani</li>
+            <li>Sicurezza</li>
+            <li>Funzioni</li>
           </ul>
         </div>
         <div class="footerlist">
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li id="titoloulfooter">Community</li>
+            <li>Applicazione desktop</li>
+            <li>Perchè dropbox</li>
+            <li>Piani</li>
+            <li>Sicurezza</li>
+            <li>Funzioni</li>
           </ul>
         </div>
       </div>
