Fix estetico menu' a tendina + rework del css

--- a/index.html
+++ b/index.html
@@ -322,31 +322,67 @@
         </div>
       </div>
 
-      <div id="faqcontainer">
-        <div id="faqbox">
-          <div id="faqtextbox">Domande frequenti</div>
+      <!--Menu' tendina--->
+      <div class="menuflexbox">
+        <div class="menubox">
+          <div id="uppermenubox"><h1 id="titolmenubox">Domande Frequenti</h1></div>
           <hr>
-          <div class="faqquestionbox"><span>qual'è la differenza tra drop business standard e Dropbox Business Advanced</span>
-            <p id="txtbox">Lorem ipsum dolor sit amet consectetur, 
-              adipisicing elit. Iusto sequi voluptatum assumenda corporis.
-               Impedit, esse perspiciatis, eligendi enim voluptatum molestiae
-                odit, iste ad labore aut eius optio reprehenderit officia explicabo.</p>
-           </div>
-           <hr>
-          <div class="faqquestionbox"><span>qual'è la differenza tra drop business standard e Dropbox Business Advanced</span>
-            <p id="txtbox">Lorem ipsum dolor sit amet consectetur, 
-              adipisicing elit. Iusto sequi voluptatum assumenda corporis.
-               Impedit, esse perspiciatis, eligendi enim voluptatum molestiae
-                odit, iste ad labore aut eius optio reprehenderit officia explicabo.</p> </div>
-            <hr>
-          <div class="faqquestionbox"><span>qual'è la differenza tra drop business standard e Dropbox Business Advanced</span>
-            <p id="txtbox">Lorem ipsum dolor sit amet consectetur, 
-              adipisicing elit. Iusto sequi voluptatum assumenda corporis.
-               Impedit, esse perspiciatis, eligendi enim voluptatum molestiae
-                odit, iste ad labore aut eius optio reprehenderit officia explicabo.</p></div>
-            <hr>    
+          <div class="internalmenubox">
+            <div id="leftbox">
+              <span
+                >Qual'è la differenza tra drop business standard e Dropbox
+                Business Advanced</span
+              >
+              <p id="leftboxtxt">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam,
+                veniam non. Voluptatum beatae placeat quidem praesentium
+                asperiores, nemo enim consequatur, illum unde accusamus odio
+                pariatur esse velit voluptates autem et.
+              </p>
+            </div>
+            <div id="rightbox">
+              <i class="fa-solid fa-chevron-down"></i>
+            </div>
+          </div>
+          <hr>
+          <div class="internalmenubox">
+              <div id="leftbox">
+                  <span
+                    >Qual'è la differenza tra drop business standard e Dropbox
+                    Business Advanced</span
+                  >
+                  <p id="leftboxtxt">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam,
+                    veniam non. Voluptatum beatae placeat quidem praesentium
+                    asperiores, nemo enim consequatur, illum unde accusamus odio
+                    pariatur esse velit voluptates autem et.
+                  </p>
+          </div>
+          <div id="rightbox">
+              <i class="fa-solid fa-chevron-down"></i>
+          </div>
+          </div>
+          <hr>
+          <div class="internalmenubox">
+              <div id="leftbox">
+                  <span
+                    >Qual'è la differenza tra drop business standard e Dropbox
+                    Business Advanced</span
+                  >
+                  <p id="leftboxtxt">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam,
+                    veniam non. Voluptatum beatae placeat quidem praesentium
+                    asperiores, nemo enim consequatur, illum unde accusamus odio
+                    pariatur esse velit voluptates autem et.
+                  </p>
+          </div>
+          <div id="rightbox">
+              <i class="fa-solid fa-chevron-down"></i>
+          </div>
         </div>
+        <hr>
       </div>
+      <!--Menu' tendina--->
     </div>
     <!--Container bottom--->
   </body>
